<resources>
    <string name="app_name">Lesson1</string>
    <string name="city_1" translatable="false">City_1</string>
    <string name="city_2" translatable="false">City_2</string>
    <string name="city_3" translatable="false">City_3</string>
    <string name="city_4" translatable="false">City_4</string>
    <string name="city_5" translatable="false">City_5</string>
    <string name="_26_06_2020_13_c">26.06.2020 13 м/c</string>
    <string name="_30_06_2020_14_c">30.06.2020 14 м/c</string>
    <string name="_29_06_2020_9_c" translatable="false">29.06.2020 9 м/c</string>
    <string name="_27_06_2020_8_c">27.06.2020      8 м/c</string>
    <string name="_28_06_2020_5_c">28.06.2020 5 м/c</string>
    <string name="moscow">Moscow</string>
    <string name="_20_c">20 °C</string>
    <string name="_25_06_2020_15">25.06.2020 15 м/с</string>
    <string name="textview">TextView</string>
</resources>